Add users permissions to upload a public route.
